# multilingual-low-resource-ir-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
assets/: README.md
configs/: synthetic_lab.yaml
data/: README.md
docs/: data_and_ethics.md  methodology.md  report_template.md  synthetic_lab.md
matlab/: plot_ir_metrics.m
notebooks/: 01_synthetic_multilingual_ir_lab.ipynb
scripts/: run_synthetic_ir_lab.py
src/: tabulate.py
src/lowresource_ir/: __init__.py  audit.py  chunking.py  config.py  embeddings.py  evaluation.py  noise.py  normalization.py  qa.py  reporting.py  retrieval.py  synthetic.py  visualization.py
tests/: test_noise_and_audit.py  test_qa.py  test_retrieval.py  test_synthetic.py
